    making other testcases to fail. (tucu)

    HADOOP-8031. Configuration class fails to find embedded .jar resources; 
    should use URL.openStream() (genman via tucu)

    HADOOP-8738. junit JAR is showing up in the distro (tucu)

    HADOOP-8737. cmake: always use JAVA_HOME to find libjvm.so, jni.h, jni_md.h.
    (Colin Patrick McCabe via eli)

  BREAKDOWN OF HDFS-3042 SUBTASKS

    HADOOP-8220. ZKFailoverController doesn't handle failure to become active
    correctly (todd)

    HADOOP-8228. Auto HA: Refactor tests and add stress tests. (todd)
    
    HADOOP-8215. Security support for ZK Failover controller (todd)
    
    HADOOP-8245. Fix flakiness in TestZKFailoverController (todd)
    
    HADOOP-8257. TestZKFailoverControllerStress occasionally fails with Mockito
    error (todd)
    
    HADOOP-8260. Replace ClientBaseWithFixes with our own modified copy of the
    class (todd)
    
    HADOOP-8246. Auto-HA: automatically scope znode by nameservice ID (todd)
    
    HADOOP-8247. Add a config to enable auto-HA, which disables manual
    FailoverController (todd)
    
    HADOOP-8306. ZKFC: improve error message when ZK is not running. (todd)
    
    HADOOP-8279. Allow manual failover to be invoked when auto-failover is
    enabled. (todd)
    
    HADOOP-8276. Auto-HA: add config for java options to pass to zkfc daemon
    (todd via eli)
    
    HADOOP-8405. ZKFC tests leak ZK instances. (todd)

Release 2.0.0-alpha - 05-23-2012

  INCOMPATIBLE CHANGES

    HADOOP-7920. Remove Avro Rpc. (suresh)

  NEW FEATURES

    HADOOP-7773. Add support for protocol buffer based RPC engine.
    (suresh)

    HADOOP-7875. Add helper class to unwrap protobuf ServiceException.
    (suresh)

    HADOOP-7454. Common side of High Availability Framework (HDFS-1623)
    Contributed by Todd Lipcon, Aaron T. Myers, Eli Collins, Uma Maheswara Rao G,
    Bikas Saha, Suresh Srinivas, Jitendra Nath Pandey, Hari Mankude, Brandon Li,